@@ -1,6 +1,7 @@
 0.1692
     - separate DBIx::Custom type_rule from filter
-    - DBIx::Custom Model filter attrribute is DEPRECATED!
+    - DBIx::Custom::Model filter attrribute is DEPRECATED!
+    - DBIx::Custom::Model name attribute is DEPRECATED!
     - removed EXPERIMENTAL DBIx::Custom::Model alias_table
     - added DBIx::Custom column method's table option
     - separate DBIx::Custom::Result type_rule from filter again
